<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_howto">Howto</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_levelup">LevelUp</string>    
    <string name="title_activity_join">Join</string>
    <string name="title_activity_create">Create</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="title_activity_gameScreenZ">GameScreenZ</string>
    <string name="title_activity_gameScreenH">GameScreenH</string>
    <string name="title_activity_scoreBoard">ScoreBoard</string>
    
    <string name="app_name">Zombie Catch</string>
    <string name="Email">Email</string>
    <string name="textPersonName">Email</string>
    <string name="Password">Password</string>
    <string name="Confirm">Confirm</string>
    <string name="Back">Back</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Create">Create a game</string>
    <string name="Join">Join a game</string>
    <string name="Profile">Profile</string>
    <string name="Howto">How to play</string>
    <string name="Level_up">Level up</string>
    <string name="Human">Human</string>
    <string name="Points">Points</string>
    <string name="Zombie">Zombie</string>
    
    <string name="Register_Registration">Registration</string>
    <string name="Register_RepeatPassword">Repeat password</string>
    
    <string name="How_to_play">How to play</string>
    <string name="Howto_text">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>

    <string name="Join_GamesFound">Games found</string>
    
    <string name="Create_text">Create a game</string>
    <string name="Create_title">Game title</string>
    <string name="Create_size">Field size</string>
    <string name="Create_maxPlayers">Maximum players</string>

    <string name="Lobby_ready">Ready</string>
    <string name="Lobby_waiting">Waiting for players</string>
    
    <string name="Game_healthy">Healthy</string>
    
    <string name="Scores_ZombiesWin">Zombies win</string>
    <string name="Scores_HumansWin">Humans win</string>
    
    <string name="Scores_backToMenu">Back</string>
    
</resources>